--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,7 +6,7 @@
     name: "{{ chronyd_service }}"
     state: "restarted"
     enabled: true
-  when: 'ansible_distribution == "SLES" and ansible_distribution_major_version > "12"'
+  when: '(ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12"'
 
 - name: "restart ntpd"
   service:
