tasks/main.yml: rename SLES12 tasks with ntp.conf

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,7 @@
 #
 # SLES12 with ntpd
 #
-- name: "Add FAU servers to ntp.conf"
+- name: "SLES12 only: Add FAU servers to ntp.conf"
   lineinfile:
     path: "/etc/ntp.conf"
     regexp: "{{ item }}"
