meta/main.yml: remove explicit version numbers and just use all for opensuse and SLES

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,11 +12,10 @@ galaxy_info:
   platforms:
     - name: opensuse
       versions:
-        - '15.1'
+        - all
     - name: SLES
       versions:
-        - 12
-        - 15
+        - all
 
   galaxy_tags: []
 
