--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
   when: '((ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12")
         or ansible_distribution == "openSUSE MicroOS"'
   notify:
-    - "restart chronyd"
+    - "Restart chronyd"
 
 - name: "Create configuration file for chrony"
   ansible.builtin.template:
@@ -24,7 +24,7 @@
   when: '((ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12")
         or ansible_distribution == "openSUSE MicroOS"'
   notify:
-    - "restart chronyd"
+    - "Restart chronyd"
 
 #
 # SLES12 with ntpd
@@ -41,4 +41,4 @@
   with_items:
     - "{{ list_of_ntp_servers }}"
   notify:
-    - "restart ntpd"
+    - "Restart ntpd"
