--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,16 +1,16 @@
 ---
 # set_fau_ntp_servers/handlers/main.yml
 
-- name: "Restart chronyd"
+- name: 'Restart chronyd'
   ansible.builtin.service:
     name: "{{ chronyd_service }}"
-    state: "restarted"
+    state: 'restarted'
     enabled: true
   when: '(ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12"'
 
-- name: "Restart ntpd"
+- name: 'Restart ntpd'
   ansible.builtin.service:
     name: "{{ ntpd_service }}"
-    state: "restarted"
+    state: 'restarted'
     enabled: true
   when: 'ansible_distribution == "SLES" and ansible_distribution_major_version == "12"'
