--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -6,11 +6,13 @@
     name: "{{ chronyd_service }}"
     state: 'restarted'
     enabled: true
-  when: '(ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12"'
+  when:
+    - '(ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12"'
 
 - name: 'Restart ntpd'
   ansible.builtin.service:
     name: "{{ ntpd_service }}"
     state: 'restarted'
     enabled: true
-  when: 'ansible_distribution == "SLES" and ansible_distribution_major_version == "12"'
+  when:
+    - 'ansible_distribution == "SLES" and ansible_distribution_major_version == "12"'
