handlers/main.yml: use integers when comparing ansible_distribution_major_version

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,7 +7,7 @@
     state: 'restarted'
     enabled: true
   when:
-    - '(ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12"'
+    - '(ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version | int > 12'
 
 - name: 'Restart ntpd'
   ansible.builtin.service:
@@ -15,4 +15,4 @@
     state: 'restarted'
     enabled: true
   when:
-    - 'ansible_distribution == "SLES" and ansible_distribution_major_version == "12"'
+    - 'ansible_distribution == "SLES" and ansible_distribution_major_version | int == 12'
