--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,7 +7,7 @@
     state: 'restarted'
     enabled: true
   when:
-    - '(ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap")'
+    - 'ansible_os_family == "Suse"'
     - 'ansible_distribution_major_version | int > 12'
 
 - name: 'Restart ntpd'
