--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,40 +5,40 @@
 # SLES15 or newer with chronyd
 #
 
-- name: "Remove /etc/chrony.d/opensuse.conf"
+- name: 'Remove /etc/chrony.d/opensuse.conf'
   ansible.builtin.file:
-    path: "/etc/chrony.d/opensuse.conf"
-    state: "absent"
+    path: '/etc/chrony.d/opensuse.conf'
+    state: 'absent'
   when: '((ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12")
         or ansible_distribution == "openSUSE MicroOS"'
   notify:
-    - "Restart chronyd"
+    - 'Restart chronyd'
 
-- name: "Create configuration file for chrony"
+- name: 'Create configuration file for chrony'
   ansible.builtin.template:
-    src: "etc_chrony.d_fau_servers.conf.j2"
-    dest: "/etc/chrony.d/fau_servers.conf"
-    owner: "root"
-    group: "root"
-    mode: "0644"
+    src: 'etc_chrony.d_fau_servers.conf.j2'
+    dest: '/etc/chrony.d/fau_servers.conf'
+    owner: 'root'
+    group: 'root'
+    mode: '0644'
   when: '((ansible_distribution == "SLES" or ansible_distribution == "openSUSE Leap") and ansible_distribution_major_version > "12")
         or ansible_distribution == "openSUSE MicroOS"'
   notify:
-    - "Restart chronyd"
+    - 'Restart chronyd'
 
 #
 # SLES12 with ntpd
 #
-- name: "SLES12 only: Add FAU servers to ntp.conf"
+- name: 'SLES12 only: Add FAU servers to ntp.conf'
   ansible.builtin.lineinfile:
-    path: "/etc/ntp.conf"
+    path: '/etc/ntp.conf'
     regexp: "{{ item }}"
     line: "server {{ item }} iburst"
-    owner: "root"
-    group: "ntp"
+    owner: 'root'
+    group: 'ntp'
     mode: '0640'
   when: 'ansible_distribution == "SLES" and ansible_distribution_major_version == "12"'
   with_items:
     - "{{ list_of_ntp_servers }}"
   notify:
-    - "Restart ntpd"
+    - 'Restart ntpd'
