tasks/main.yml: split up long when-condition into multiple lines, as they are combined with AND anyway

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,7 +37,9 @@
     owner: 'root'
     group: 'ntp'
     mode: '0640'
-  when: 'ansible_distribution == "SLES" and ansible_distribution_major_version == "12"'
+  when:
+    - 'ansible_distribution == "SLES"'
+    - 'ansible_distribution_major_version == "12"'
   with_items:
     - "{{ list_of_ntp_servers }}"
   notify:
