handlers/main.yml: rework when-condition for chrony task to match both SLES/Leap >= 15 and openSUSE MicroOS

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -7,8 +7,10 @@
     state: 'restarted'
     enabled: true
   when:
-    - 'ansible_os_family == "Suse"'
-    - 'ansible_distribution_major_version | int > 12'
+    - '
+      (ansible_os_family == "Suse" and ansible_distribution_major_version | int > 12)
+      or ansible_os_family == "openSUSE MicroOS"
+      '
 
 - name: 'Restart ntpd'
   ansible.builtin.service:
