handlers/main.yml: use chrony on openSUSE Leap Micro

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -10,6 +10,7 @@
     - '
       (ansible_os_family == "Suse" and ansible_distribution_major_version | int > 12)
       or ansible_os_family == "openSUSE MicroOS"
+      or ansible_os_family == "openSUSE Leap Micro"
       '
 
 - name: 'Restart ntpd'
