--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
   when:
     - '
       (ansible_os_family == "Suse" and ansible_distribution_major_version | int > 12)
-      or ansible_distribution == "openSUSE MicroOS"
+      or ansible_os_family == "openSUSE MicroOS"
       '
   notify:
     - 'Restart chronyd'
@@ -27,7 +27,7 @@
   when:
     - '
       (ansible_os_family == "Suse" and ansible_distribution_major_version | int > 12)
-      or ansible_distribution == "openSUSE MicroOS"
+      or ansible_os_family == "openSUSE MicroOS"
       '
   notify:
     - 'Restart chronyd'
